# pointcloudrender

./: Cargo.toml  README.md  build.rs
src/: background_shader.glsl  background_shader.rs  background_shader2.glsl  background_shader_wgpu.rs  filling_shader.rs  filling_shader_wgpu.rs  fragment.glsl  headless.rs  main.rs  renderer.rs  texture.rs  vertex.glsl  view_params.rs  wgpu_renderer.rs
src/shaders/: background_shader.glsl  background_shader.wgsl  fragment.glsl  occlusion_shader.wgsl  raster.wgsl  vertex.glsl
