[package]
name = "pointcloudrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bytemuck = { version = "1.14.0", features = ["derive"] }
clap = { version = "4.4.6", features = ["derive"] }
float-ord = "0.3.2"
image = "0.24.7"
nalgebra = "0.32.3"
pollster = "0.3.0"
raw-window-handle = "0.5"
wgpu = {git = "https://github.com/gfx-rs/wgpu.git", rev="2a9fdf9aa1ca1a9e7191dba7c75b512fb07ec337"}
winit = "0.28.7"
